--- a/css/login.scss
+++ b/css/login.scss
@@ -32,7 +32,7 @@ main {
             border: none;
             flex-wrap: wrap;
             label {
-                flex: 1 1 20%;
+                flex: 1 1 100%;
                 font-size: 1.5rem;
                 font-weight: bold;
             }
@@ -55,6 +55,17 @@ main {
                 flex: 1 1 100%;
                 text-align: center;
                 color: red;
+            }
+            svg {
+                max-width: 2em;
+                max-height: 2em;
+                cursor: pointer;
+                fill: cadetblue;
+            }
+        }
+        #password-fieldset{
+            input{
+                flex: 1 1 80%;
             }
         }
         button {
