--- a/css/register.scss
+++ b/css/register.scss
@@ -56,6 +56,17 @@ main {
                 text-align: center;
                 color: red;
             }
+            svg {
+                max-width: 2em;
+                max-height: 2em;
+                cursor: pointer;
+                fill: cadetblue;
+            }
+        }
+        #password-fieldset{
+            input{
+                flex: 1 1 80%;
+            }
         }
         button {
             max-width: 40%;
