--- a/css/home.css
+++ b/css/home.css
@@ -6,7 +6,7 @@
 main {
   background-color: darkcyan;
   position: relative;
-  height: 80vh;
+  height: 90vh;
 }
 main img {
   max-width: 60%;
@@ -19,9 +19,15 @@ main img {
   -webkit-clip-path: polygon(0 0, 100% 0%, 80% 100%, 0 100%);
           clip-path: polygon(0 0, 100% 0%, 80% 100%, 0 100%);
 }
-main h1 {
+main h1.heading1 {
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 25%;
+  right: 5%;
+  color: azure;
+}
+main h2.heading2 {
+  position: absolute;
+  top: 50%;
+  right: 2%;
   color: azure;
 }/*# sourceMappingURL=home.css.map */
