--- a/css/typography.css
+++ b/css/typography.css
@@ -17,6 +17,18 @@ button {
   font-size: 1.4rem;
 }
 
+li {
+  font-size: 1.8rem;
+}
+
+h1 {
+  font-size: 5rem;
+}
+
+h2 {
+  font-size: 2.5rem;
+}
+
 h3 {
   font-size: 1.9rem;
 }
