--- a/css/typography.scss
+++ b/css/typography.scss
@@ -17,6 +17,18 @@ button {
     font-size: clamp(1.1rem, 1.4rem, 1.6rem);
 }
 
+li {
+    font-size: clamp(1.3rem, 1.8rem, 2.2rem);
+}
+
+h1 {
+    font-size: clamp(4rem, 5rem, 5.5rem);
+}
+
+h2 {
+    font-size: clamp(2rem, 2.5rem, 3rem);
+}
+
 h3 {
     font-size: clamp(1.5rem, 1.9rem, 2.2rem);
 }
