--- a/css/typography.scss
+++ b/css/typography.scss
@@ -33,6 +33,10 @@ h3 {
     font-size: clamp(1.5rem, 1.9rem, 2.2rem);
 }
 
+h5 {
+    font-size: clamp(1.2rem, 1.5rem,1.8rem);
+}
+
 label {
     font-size: clamp(1rem, 1.3rem, 1.6rem);
     font-weight: bold;
