--- a/css/typography.scss
+++ b/css/typography.scss
@@ -37,9 +37,13 @@ h5 {
     font-size: clamp(1.2rem, 1.5rem,1.8rem);
 }
 
-label {
+label, a{
     font-size: clamp(1rem, 1.3rem, 1.6rem);
     font-weight: bold;
+}
+
+a {
+    text-decoration: none;
 }
 
 input {
